# agent-engineering-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_MEMORY.md  PYPI_README.md  README.md  aet.intent.json  aet.toml  pyproject.toml  release-classification.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  dogfood-case-study.yml  feature.yml
.github/workflows/: ci.yml  publish-pypi.yml  real-host-gate.yml  release.yml
docs/: README.zh-CN.md  evolution-boundary.md  evolve-contract.md  productization-plan.md  rule-catalog.md  security-and-retention.md  stability.md
docs/assets/: aet-architecture-en.html  aet-architecture-en.mmd  aet-architecture-zh-cn.html  aet-architecture-zh-cn.mmd
docs/case-studies/: stale-proof.md
docs/dogfood/: README.md  cli-creator-skill-2026-07-11.json  cli-creator-skill-2026-07-11.md  codex-agents-audit-2026-07-11.md  pain-miner-2026-07-11.json  pain-miner-2026-07-11.md  stock-analysis-2026-07-11.json  stock-analysis-2026-07-11.md
docs/superpowers/plans/: 2026-07-12-v1-3-context-decision-ledger.md  2026-07-12-v1-4-trace-artifacts.md  2026-07-13-v1-9-quality-loop.md
eval/adversarial/: immutable-contract.json
eval/core/: trace-boundary.json  unknown-preservation.json
eval/held-out/: missing-proof.json
eval/real-agent/: build_candidate.py  proof-handoff-pattern.json  release_classification.py  release_gate.py  run_real_host_gate.py
eval/real-agent/core/: proof-success.json
eval/real-agent/deterministic/: 01-proof-pass.json  02-refund-pass.json  03-refund-missing.json  04-refund-order.json  05-refund-args.json  06-nonzero-success.json  07-nonzero-unknown.json  08-timeout-success.json  09-stale-trace.json  10-scope-write.json  11-private-output.json
eval/real-agent/fixtures/business-flow/repo/: README.md  aet.intent.json
eval/real-agent/fixtures/python-proof-held-out/repo/: aet.intent.json
eval/real-agent/held-out/: proof-held-out.json
eval/real-agent/validation/: proof-validation.json
eval/validation/: evidence-handoff.json  stale-proof.json
examples/: aet.intent.example.json  stale-proof-demo.sh
examples/github-actions/: aet-audit.yml
repository-audit-showcase/cases/google-adk/: repository-lock.json
repository-audit-showcase/cases/openhands/: repository-lock.json
repository-audit-showcase/cases/swe-agent/: repository-lock.json
repository-audit-showcase/docs/: scope-and-publication.md
repository-audit-showcase/profiles/: google-adk.json  openhands.json  swe-agent.json
repository-audit-showcase/reports/google-adk/audit-result/: evidence_manifest.json  findings.json
repository-audit-showcase/reports/openhands/audit-result/: evidence_manifest.json  findings.json
repository-audit-showcase/reports/swe-agent/audit-result/: evidence_manifest.json  findings.json
repository-audit-showcase/schemas/: repository-audit-profile-v1.schema.json  repository-audit-result-v1.schema.json  repository-evidence-manifest-v1.schema.json
schemas/: audit-profile-v1.schema.json  audit-task-v1.schema.json  evidence-ir-1.json  evolution-candidate-v2.schema.json  evolution-constitution-v1.json  gate-history-assessment-v1.schema.json  gate-history-registry-v1.schema.json  gate-plan-v2.schema.json  learn-agent-run.schema.json  learn-candidate.schema.json  learn-task-v2.schema.json  learn-task.schema.json  policy-task-v1.schema.json  quality-diagnosis-v1.schema.json  quality-regression-sidecar-v1.schema.json  review-policy-v1.schema.json  trace-validator-v1.schema.json  triage-policy-v1.schema.json
skills/agent-engineering-toolkit/: SKILL.md
skills/agent-engineering-toolkit/agents/: openai.yaml
skills/agent-engineering-toolkit/references/: cross-agent-use.md  delivery-workflow.md  evolution-workflow.md  provenance-workflow.md  quality-workflow.md  repository-audit-showcase.md  security-boundaries.md  v0.1-contract.md  v0.2-contract.md  v0.3-contract.md  v1-contract.md
src/aet/: __init__.py  audit_evolution.py  audit_feedback.py  cli.py  config.py  context.py  decision.py  discovery.py  evidence.py  evolve.py  gate_plan.py  learn.py  learn_contracts.py  learn_runners.py  learn_scoring.py  learn_statistics.py  models.py  policy_targets.py  quality.py  reporters.py  repository_audit.py  review.py  rulepacks.py  rulepacks_builtin.json  rules.py  run.py  triage.py
src/aet/evolution/: __init__.py  candidate.py  constitution.py  targets.py
tests/: test_audit.py  test_audit_evolution_suites.py  test_audit_feedback.py  test_audit_rule_evolution.py  test_business_quality_flows.py  test_evolution_core.py  test_gate_plan.py  test_learn.py  test_learn_contracts.py  test_learn_observed.py  test_learn_statistics.py  test_policy_targets.py  test_productization.py  test_quality_loop.py  test_repository_audit.py  test_rulepacks.py
tests/evolution/audit/adversarial/: suite.json
tests/evolution/audit/core/: suite.json
tests/evolution/audit/held_out/: suite.json
tests/evolution/audit/validation/: suite.json
tests/fixtures/audit-evolution/duplicate/: AGENTS.md  CODEX.md
tests/fixtures/audit-evolution/empty/: README.md
tests/fixtures/audit-evolution/example-block/: AGENTS.md
tests/fixtures/audit-evolution/heldout-duplicate/: AGENTS.md  CLAUDE.md
tests/fixtures/audit-evolution/heldout-empty/: README.md
tests/fixtures/audit-evolution/heldout-missing-absolute/: AGENTS.md
tests/fixtures/audit-evolution/heldout-missing-command/: AGENTS.md
tests/fixtures/audit-evolution/heldout-missing-link/: AGENTS.md
tests/fixtures/audit-evolution/heldout-package-script-missing/: AGENTS.md  package.json
tests/fixtures/audit-evolution/heldout-valid/: AGENTS.md
tests/fixtures/audit-evolution/large-root/: AGENTS.md
tests/fixtures/audit-evolution/missing-absolute/: AGENTS.md
tests/fixtures/audit-evolution/missing-command/: AGENTS.md
tests/fixtures/audit-evolution/missing-link/: AGENTS.md
tests/fixtures/audit-evolution/package-script-missing/: AGENTS.md  package.json
tests/fixtures/audit-evolution/valid/: AGENTS.md
tests/fixtures/broken_project/: AGENTS.md
tests/fixtures/valid_project/: AGENTS.md
(+34 files in other folders)
