[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-engineering-toolkit"
version = "1.5.0"
description = "Evidence-first audits, change gates, execution proof, repository archaeology, and human-gated Skill evolution for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AdvancingTitans" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/AdvancingTitans/agent-engineering-toolkit"
Issues = "https://github.com/AdvancingTitans/agent-engineering-toolkit/issues"

[project.scripts]
aet = "aet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
