[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-engineering-toolkit"
version = "1.12.0"
description = "An evidence-driven Agent engineering quality and control layer for delivery proof, deterministic diagnosis, and bounded asset evolution."
readme = "PYPI_README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AdvancingTitans" }]
keywords = [
  "ai-agents",
  "coding-agents",
  "codex",
  "claude-code",
  "evidence",
  "code-review",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/AdvancingTitans/agent-engineering-toolkit"
Repository = "https://github.com/AdvancingTitans/agent-engineering-toolkit"
Documentation = "https://github.com/AdvancingTitans/agent-engineering-toolkit#readme"
Issues = "https://github.com/AdvancingTitans/agent-engineering-toolkit/issues"
Changelog = "https://github.com/AdvancingTitans/agent-engineering-toolkit/blob/main/CHANGELOG.md"

[project.scripts]
aet = "aet.cli:main"

[dependency-groups]
dev = ["pytest>=9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aet = ["rulepacks_builtin.json"]

[tool.setuptools.data-files]
"share/aet/schemas" = ["schemas/*.json"]
"share/aet/evolution/audit/core" = ["tests/evolution/audit/core/*.json"]
"share/aet/evolution/audit/validation" = ["tests/evolution/audit/validation/*.json"]
"share/aet/evolution/audit/held_out" = ["tests/evolution/audit/held_out/*.json"]
"share/aet/evolution/audit/adversarial" = ["tests/evolution/audit/adversarial/*.json"]
"share/aet/fixtures/audit-evolution/duplicate" = ["tests/fixtures/audit-evolution/duplicate/*"]
"share/aet/fixtures/audit-evolution/empty" = ["tests/fixtures/audit-evolution/empty/*"]
"share/aet/fixtures/audit-evolution/example-block" = ["tests/fixtures/audit-evolution/example-block/*"]
"share/aet/fixtures/audit-evolution/heldout-duplicate" = ["tests/fixtures/audit-evolution/heldout-duplicate/*"]
"share/aet/fixtures/audit-evolution/heldout-empty" = ["tests/fixtures/audit-evolution/heldout-empty/*"]
"share/aet/fixtures/audit-evolution/heldout-missing-absolute" = ["tests/fixtures/audit-evolution/heldout-missing-absolute/*"]
"share/aet/fixtures/audit-evolution/heldout-missing-command" = ["tests/fixtures/audit-evolution/heldout-missing-command/*"]
"share/aet/fixtures/audit-evolution/heldout-missing-link" = ["tests/fixtures/audit-evolution/heldout-missing-link/*"]
"share/aet/fixtures/audit-evolution/heldout-package-script-missing" = ["tests/fixtures/audit-evolution/heldout-package-script-missing/*"]
"share/aet/fixtures/audit-evolution/heldout-valid" = ["tests/fixtures/audit-evolution/heldout-valid/*"]
"share/aet/fixtures/audit-evolution/large-root" = ["tests/fixtures/audit-evolution/large-root/*"]
"share/aet/fixtures/audit-evolution/missing-absolute" = ["tests/fixtures/audit-evolution/missing-absolute/*"]
"share/aet/fixtures/audit-evolution/missing-command" = ["tests/fixtures/audit-evolution/missing-command/*"]
"share/aet/fixtures/audit-evolution/missing-link" = ["tests/fixtures/audit-evolution/missing-link/*"]
"share/aet/fixtures/audit-evolution/package-script-missing" = ["tests/fixtures/audit-evolution/package-script-missing/*"]
"share/aet/fixtures/audit-evolution/valid" = ["tests/fixtures/audit-evolution/valid/*"]
"share/aet/fixtures/audit-evolution/skill-missing-frontmatter/skills/example" = ["tests/fixtures/audit-evolution/skill-missing-frontmatter/skills/example/*"]
"share/aet/fixtures/audit-evolution/skill-name-mismatch/skills/example" = ["tests/fixtures/audit-evolution/skill-name-mismatch/skills/example/*"]
"share/aet/fixtures/audit-evolution/skill-no-verification/skills/example" = ["tests/fixtures/audit-evolution/skill-no-verification/skills/example/*"]
"share/aet/fixtures/audit-evolution/heldout-skill-missing-frontmatter/skills/heldout" = ["tests/fixtures/audit-evolution/heldout-skill-missing-frontmatter/skills/heldout/*"]
"share/aet/fixtures/audit-evolution/heldout-skill-name-mismatch/skills/heldout" = ["tests/fixtures/audit-evolution/heldout-skill-name-mismatch/skills/heldout/*"]
"share/aet/fixtures/audit-evolution/heldout-skill-no-verification/skills/heldout" = ["tests/fixtures/audit-evolution/heldout-skill-no-verification/skills/heldout/*"]
"share/aet/repository-audit-showcase/profiles" = ["repository-audit-showcase/profiles/*.json"]
"share/aet/repository-audit-showcase/schemas" = ["repository-audit-showcase/schemas/*.json"]
"share/aet/repository-audit-showcase/cases/swe-agent" = ["repository-audit-showcase/cases/swe-agent/*.json"]
"share/aet/repository-audit-showcase/cases/google-adk" = ["repository-audit-showcase/cases/google-adk/*.json"]
"share/aet/repository-audit-showcase/cases/openhands" = ["repository-audit-showcase/cases/openhands/*.json"]
"share/aet/repository-audit-showcase/docs" = ["repository-audit-showcase/docs/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
